objects/TogglePilotOrLiveFeatureSalesOrCare__c.object
<CustomObject>
    <fields>
        <fullName>Enable_Care_Desktop_Account_AAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Care Desktop Account AAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Care_Online_Account_AAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Care Online Account AAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sales_Desktop_Account_AAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Desktop Account AAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sales_Online_Account_AAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sales Online Account AAE</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>